tests/files/type_checker_tests/should_fail/101.cmdr
//Should fail pre-increment on something of incorrect type
a = "hi";
++a;
